Fix hamburger menu visibility by resolving FontAwesome CSS conflicts and positioning issues
- Remove conflicting FontAwesome CSS import from main.scss
- Convert CSS-based FontAwesome icons to React individual imports in page.tsx and PositionedDarkModeToggle.tsx
- Fix CSS positioning of hamburger toggle button from left-based to right-based positioning
- Update all responsive breakpoints to maintain consistent positioning across screen sizes
- Hamburger menu now visible and functional on all screen sizes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1967,21 +1967,21 @@ button,
       width: calc(100% + 4.44444em); }
   #sidebar .toggle {
     text-decoration: none;
-    -moz-transition: left 0.5s ease;
-    -webkit-transition: left 0.5s ease;
-    -ms-transition: left 0.5s ease;
-    transition: left 0.5s ease;
+    -moz-transition: right 0.5s ease;
+    -webkit-transition: right 0.5s ease;
+    -ms-transition: right 0.5s ease;
+    transition: right 0.5s ease;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     border: 0;
     display: block;
     height: 7.5em;
-    left: 26em;
+    right: -6em;
     line-height: 7.5em;
     outline: 0;
     overflow: hidden;
-    position: absolute;
+    position: fixed;
     text-align: center;
-    text-indent: -15em;
+    text-indent: 0;
     white-space: nowrap;
     top: 0;
     width: 6em;
@@ -2013,6 +2013,8 @@ button,
       color: inherit; }
   #sidebar.inactive {
     margin-left: -26em; }
+    #sidebar.inactive .toggle {
+      right: 0; }
   @media screen and (max-width: 1680px) {
     #sidebar {
       width: 24em; }
@@ -2025,9 +2027,9 @@ button,
           width: calc(100% + 3.33333em); }
       #sidebar .toggle {
         height: 6.25em;
-        left: 24em;
+        right: -5em;
         line-height: 6.25em;
-        text-indent: 5em;
+        text-indent: 0;
         width: 5em; }
         #sidebar .toggle:before {
           font-size: 1.5rem; }
@@ -2059,7 +2061,7 @@ button,
           height: 4em;
           width: 100%; }
       #sidebar .toggle {
-        text-indent: 6em;
+        text-indent: 0;
         width: 6em; }
         #sidebar .toggle:before {
           font-size: 1.5rem;
@@ -2070,7 +2072,7 @@ button,
         display: none; } }
   @media screen and (max-width: 736px) {
     #sidebar .toggle {
-      text-indent: 7.25em;
+      text-indent: 0;
       width: 7.25em; }
       #sidebar .toggle:before {
         color: #7f888f;
